# lt-rtpi-display

./: .gitignore  README.md  config.example.ini  config.ini  lt-rtpi-display.service  pyproject.toml  rtpi.py  rtpi.service
.github/workflows/: ci.yml  publish.yml
src/lt_rtpi_display/: __init__.py  __main__.py
