[project]
name = "lt-rtpi-display"
version = "0.1.0"
description = "Lightweight terminal departure board for public transport in Vilnius and other Lithuanian cities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.6",
]

[tool.mypy]
files = ["rtpi.py"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DOC",  # pydoclint
    "PLR",  # pylint refactor

    "COM812",  # flake8-commas: missing-trailing-comma
    "SIM108",  # flake8-simplify: if-else-block-instead-of-if-exp
]
