[build-system]
requires = ["uv_build>=0.11.4,<0.12"]
build-backend = "uv_build"

[project]
name = "lt-rtpi-display"
version = "0.2.0"
description = "Lightweight terminal departure board for public transport in Vilnius and other Lithuanian cities"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sergey Kolosov" }]
keywords = ["rtpi", "departure-board", "public-transport", "curses", "tui", "vilnius", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
lt-rtpi-display = "lt_rtpi_display.rtpi:run"

[project.urls]
Repository = "https://github.com/sergeykolosov/lt-rtpi-display"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.6",
]

[tool.mypy]
files = ["src"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DOC",  # pydoclint
    "PLR",  # pylint refactor

    "COM812",  # flake8-commas: missing-trailing-comma
    "SIM108",  # flake8-simplify: if-else-block-instead-of-if-exp
]
